리뷰 작성시 파일첨부 가능, 본문에서 첨부된 이미지 불러오기

--- a/team4_project/src/main/webapp/WEB-INF/web.xml
+++ b/team4_project/src/main/webapp/WEB-INF/web.xml
@@ -24,11 +24,13 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 		
-		<multipart-config>
-			<max-file-size>20971520</max-file-size> <!--1MB * 20 -->
-			<max-request-size>41943040</max-request-size><!-- 40MB -->
-			<file-size-threshold>20971520</file-size-threshold> <!-- 20MB -->
-		</multipart-config>
+		<!-- fileupload multipart-config maxSize set -->
+	<multipart-config>
+        <max-file-size>209715200</max-file-size> <!-- 20MB limit -->
+        <max-request-size>209715200</max-request-size>
+        <file-size-threshold>0</file-size-threshold>
+    </multipart-config>
+    <!-- fileupload multipart-config -->
 		
 	</servlet>
 		
